Первая попытка с использованием Стейтов в компоненте Sleders

--- a/src/components/pricing/ultimate/iconBlok/iconBlock.scss
+++ b/src/components/pricing/ultimate/iconBlok/iconBlock.scss
@@ -4,6 +4,7 @@
         line-height: 46px;
         font-weight: 600;
         width: 400px;
+        height: 100%;
         margin-bottom: 10px;
     }
     .icon-blok-text{
